<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/characterName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18dp"/>

    <TextView
        android:id="@+id/might"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/might"/>

    <com.calvinlsliang.betrayalstattracker.view.StatPickerLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    <TextView
        android:id="@+id/speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/speed"/>

    <com.calvinlsliang.betrayalstattracker.view.StatPickerLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/sanity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sanity"/>

    <com.calvinlsliang.betrayalstattracker.view.StatPickerLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/knowledge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/knowledge"/>

    <com.calvinlsliang.betrayalstattracker.view.StatPickerLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>



</LinearLayout>
